# juce_project

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
